--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ TestClass.class
 /.gitconfig
 
 webgoat.gitconfig
+
+terraform/.terraform
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/.terraform.lock.hcl
