--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,7 @@ on:
 
 jobs:
     pr-build:
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ ubuntu-latest, windows-latest, macos-latest ]
+        runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
             -   name: Set up JDK 17
@@ -20,22 +17,22 @@ jobs:
                     distribution: 'temurin'
                     java-version: 17
                     architecture: x64
+
             -   name: Cache Maven packages
                 uses: actions/cache@v3.3.1
                 with:
                     path: ~/.m2
                     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
                     restore-keys: ${{ runner.os }}-m2-
+
             -   name: Build with Maven
                 run: mvn --no-transfer-progress verify
+
             -   name: "Set up QEMU"
-                if: runner.os == 'Linux'
                 uses: docker/setup-qemu-action@v2.2.0
             -   name: "Set up Docker Buildx"
-                if: runner.os == 'Linux'
                 uses: docker/setup-buildx-action@v3
             -   name: "Verify Docker WebGoat build"
-                if: runner.os == 'Linux'
                 uses: docker/build-push-action@v5.1.0
                 with:
                     context: ./
@@ -43,6 +40,7 @@ jobs:
                     push: false
                     build-args: |
                         webgoat_version=${{ env.WEBGOAT_MAVEN_VERSION }}
+                        
             -   name: "Verify Docker WebGoat desktop build"
                 uses: docker/build-push-action@v5.1.0
                 if: runner.os == 'Linux'
