--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,23 +30,19 @@ jobs:
 
             -   name: "Set up QEMU"
                 uses: docker/setup-qemu-action@v2.2.0
+
             -   name: "Set up Docker Buildx"
                 uses: docker/setup-buildx-action@v3
-            -   name: "Verify Docker WebGoat build"
-                uses: docker/build-push-action@v5.1.0
+
+            -   name: Login to Docker Hub
+                uses: docker/login-action@v3
                 with:
-                    context: ./
-                    file: ./Dockerfile
-                    push: false
-                    build-args: |
-                        webgoat_version=${{ env.WEBGOAT_MAVEN_VERSION }}
-                        
-            -   name: "Verify Docker WebGoat desktop build"
-                uses: docker/build-push-action@v5.1.0
-                if: runner.os == 'Linux'
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
+            -   name: Build and push
+                uses: docker/build-push-action@v5
                 with:
-                    context: ./
-                    file: ./Dockerfile_desktop
-                    push: false
-                    build-args: |
-                        webgoat_version=${{ env.WEBGOAT_MAVEN_VERSION }} 
+                    context: .
+                    push: true
+                    tags: user/app:latest
