--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
             -   name: Login to Docker Hub
                 uses: docker/login-action@v3
                 with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+                  username: ${{ secrets.DOCKERHUB_USERNAME_ID }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN_KEY }}
         
             -   name: Build and push
                 uses: docker/build-push-action@v5
