--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,4 +45,4 @@ jobs:
                 with:
                     context: .
                     push: true
-                    tags: jacobmassih/webGoat:latest
+                    tags: jacobmassih/webgoat:latest
