--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: "Pull requests build"
+
 on:
     push:
         paths-ignore:
@@ -7,7 +8,7 @@ on:
             - 'docs/**'
 
 jobs:
-    deploy:
+    build:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
@@ -24,7 +25,11 @@ jobs:
                     path: ~/.m2
                     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
                     restore-keys: ${{ runner.os }}-m2-
-
+    
+    docker-build-push:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
             -   name: Build with Maven
                 run: mvn --no-transfer-progress verify
 
