--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,29 +8,29 @@ on:
             - 'docs/**'
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v3
-            -   name: Set up JDK 17
-                uses: actions/setup-java@v3
-                with:
-                    distribution: 'temurin'
-                    java-version: 17
-                    architecture: x64
+    # build:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         -   uses: actions/checkout@v3
+    #         -   name: Set up JDK 17
+    #             uses: actions/setup-java@v3
+    #             with:
+    #                 distribution: 'temurin'
+    #                 java-version: 17
+    #                 architecture: x64
 
-            -   name: Cache Maven packages
-                uses: actions/cache@v3.3.1
-                with:
-                    path: ~/.m2
-                    key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                    restore-keys: ${{ runner.os }}-m2-
+    #         -   name: Cache Maven packages
+    #             uses: actions/cache@v3.3.1
+    #             with:
+    #                 path: ~/.m2
+    #                 key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    #                 restore-keys: ${{ runner.os }}-m2-
 
-            -   name: Build with Maven
-                run: mvn --no-transfer-progress verify
+    #         -   name: Build with Maven
+    #             run: mvn --no-transfer-progress verify
     
     docker-build-push:
-        needs: build
+        # needs: build
         runs-on: ubuntu-latest
         steps:
             -   name: "Set up QEMU"
