--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,4 +63,4 @@ jobs:
                 with:
                     context: .
                     push: true
-                    tags: jacobmassih/webgoat:latest
+                    tags: ${{ secrets.DOCKERHUB_REPOSITORY }}
