--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,21 @@ jobs:
                     context: .
                     push: true
                     tags: ${{ secrets.DOCKERHUB_REPOSITORY }}
+                    
+    zap_scan:
+        needs: [build,docker-build-push]
+        runs-on: ubuntu-latest
+        name: Scan the web application
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+          with:
+            ref: master
+        - name: "ZAP Scan"
+          uses: zaproxy/action-full-scan@v0.8.0
+          with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+            target: 'https://www.zaproxy.org/'
+            rules_file_name: '.zap/rules.tsv'
+            cmd_options: '-a'
