--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,10 +71,10 @@ jobs:
         name: Scan the web application
         steps:
         - name: Checkout
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
           with:
-            ref: master
-        - name: "ZAP Scan"
+            ref: main
+        - name: ZAP Scan
           uses: zaproxy/action-full-scan@v0.8.0
           with:
             token: ${{ secrets.GITHUB_TOKEN }}
