--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -2,5 +2,11 @@
 inventory = inventory
 roles_path= roles/
 host_key_checking = False
-remote_user=ec2-user
+remote_user=ubuntu
 private_key_file=terraform_key.pem
+
+[privilege_escalation]
+become=True
+become_user=root
+become_method=sudo
+become_ask_pass=False
