--- a/terraform/roles/kubernetes-master/tasks/main.yml
+++ b/terraform/roles/kubernetes-master/tasks/main.yml
@@ -29,3 +29,24 @@
 - name: Initialize Kubernetes Master
   become: true
   command: "kubeadm init --pod-network-cidr=10.244.0.0/16"
+
+- name: Create folder for kube
+  file:
+    path: $HOME/.kube
+    state: directory
+  register: kube_dir
+
+- name: Copy admin.conf file to kube
+  copy:
+    src: "/etc/kubernetes/admin.conf"
+    dest: "$HOME/.kube/config"
+    owner: "{{ kube_dir.owner }}"
+    group: "{{ kube_dir.group }}"
+    remote_src: yes
+  when: kube_dir.changed
+
+- name: Setup flannel network
+  become: true
+  become_user: root
+  become_method: sudo
+  command: "kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml"
