--- a/terraform/roles/kubernetes-master/tasks/main.yml
+++ b/terraform/roles/kubernetes-master/tasks/main.yml
@@ -26,8 +26,18 @@
     - kubelet
     - kubectl
 
+# - name: Copy k8s.conf file to master
+#   copy:
+#     src: k8s.conf
+#     dest: "{{ kubernetes_config }}"
+#   register: result
+
+- name: Load settings from all system configuration files
+  shell:
+    cmd: sysctl --system
+  # when: result.changed
+
 - name: Initialize Kubernetes Master
-  become: true
   command: "kubeadm init --pod-network-cidr=10.244.0.0/16"
 
 - name: Create folder for kube
@@ -45,8 +55,10 @@
     remote_src: yes
   when: kube_dir.changed
 
+- name: wait
+  wait_for:
+    timeout: 30
+
 - name: Setup flannel network
   become: true
-  become_user: root
-  become_method: sudo
-  command: "kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml"
+  command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
