added TFlint to pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,22 @@ jobs:
                     context: .
                     push: true
                     tags: ${{ secrets.DOCKERHUB_REPOSITORY }}
+    lint_terraform:
+        runs-on: ubuntu-latest
+
+        steps:
+        - name: Checkout code
+            uses: actions/checkout@v2
+
+        - name: Set up Terraform
+            uses: hashicorp/setup-terraform@v1
+
+        - name: Install TFLint
+            run: |
+            wget https://github.com/terraform-linters/tflint/releases/download/v0.29.1/tflint_linux_amd64.zip
+            unzip tflint_linux_amd64.zip
+            sudo mv tflint /usr/local/bin/tflint
+            tflint --version
+        - name: Run TFLint
+            run: tflint
+
