add sonarqube scan

--- a/terraform/ansible-playbook.yml
+++ b/terraform/ansible-playbook.yml
@@ -1,13 +1,11 @@
 - name: Install Kubernetes Master
-  hosts: k8s-master
-  become: true
-  remote_user: ec2-user
+  hosts: Master_Node
+  remote_user: ubuntu
   roles:
     - kubernetes-master
 
 - name: Install Kubernetes Worker
-  hosts: k8s-worker
+  hosts: Worker_Node
   become: true
-  remote_user: ansible
   roles:
     - kubernetes-worker
