--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,22 @@ jobs:
                     context: .
                     push: true
                     tags: ${{ secrets.DOCKERHUB_REPOSITORY }}
+
+    sonarqube:
+        name: SonarQube Trigger
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checking out
+          uses: actions/checkout@v3
+          with:
+            # Disabling shallow clone is recommended for improving relevancy of reporting
+            fetch-depth: 0
+        - name: SonarQube Scan
+          uses: kitabisa/sonarqube-action@v1.2.0
+          with:
+            host: ${{ secrets.SONARQUBE_HOST }}
+            login: ${{ secrets.SONARQUBE_TOKEN }}
+
                     
     zap_scan:
         needs: [build,docker-build-push]
