--- a/terraform/roles/kubernetes-master/tasks/main.yml
+++ b/terraform/roles/kubernetes-master/tasks/main.yml
@@ -4,6 +4,18 @@
     name: docker.io
     state: present
 
+- name: Add Kubernetes APT key
+  become: true
+  apt_key:
+    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    state: present
+
+- name: Add Kubernetes APT repo
+  become: true
+  apt_repository:
+    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+    state: present
+
 - name: Install kubeadm, kubelet, and kubectl
   become: true
   apt:
@@ -14,8 +26,40 @@
     - kubelet
     - kubectl
 
+- name: Copy k8s.conf file to master
+  copy:
+    src: k8s.conf
+    dest: "{{ kubernetes_config }}"
+  register: result
+
+- name: Load settings from all system configuration files
+  shell:
+    cmd: sysctl --system
+  when: result.changed
+
 - name: Initialize Kubernetes Master
+  command: "kubeadm init --pod-network-cidr=10.244.0.0/16"
+  when: result.changed
+
+- name: Create folder for kube
+  file:
+    path: $HOME/.kube
+    state: directory
+  register: kube_dir
+
+- name: Copy admin.conf file to kube
+  copy:
+    src: "/etc/kubernetes/admin.conf"
+    dest: "$HOME/.kube/config"
+    owner: "{{ kube_dir.owner }}"
+    group: "{{ kube_dir.group }}"
+    remote_src: yes
+  when: kube_dir.changed
+
+- name: wait
+  wait_for:
+    timeout: 30
+
+- name: Setup flannel network
   become: true
-  command: 
-    - kubeadm init --pod-network-cidr=10.244.0.0/16 | tee kubeadm_join_command.txt
-    - cat kubeadm_join_command.txt
+  command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
