--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,5 +82,5 @@ jobs:
                 tflint --version
 
         -   name: Run TFLint
-            run: tflint
+            run: tflint ./terraform
 
