--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,5 +82,7 @@ jobs:
                 tflint --version
 
         -   name: Run TFLint
-            run: tflint ./terraform
+            run: | 
+                tflint ./WebGoat/terraform
+                echo "Current directory: $(pwd)"
 
