--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,6 +92,6 @@ jobs:
             run: terraform fmt
     
         -   name: Run Terrascan
-            run: terrascan -d ./terraform
+            run: terrascan scan -d ./terraform
 
 
