--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,6 +92,7 @@ jobs:
             run: terraform fmt
     
         -   name: Run Terrascan
+            continue-on-error: true
             run: terrascan scan -d ./terraform
 
 
