--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,6 +100,7 @@ jobs:
             run: terrascan scan -d ./terraform
 
         -   name: Run Checkov
+            continue-on-error: true
             run: checkov --directory=./terraform
 
 
