--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,5 +102,30 @@ jobs:
         -   name: Run Checkov
             continue-on-error: true
             run: checkov --directory=./terraform
+    build_infrastructure:
+        runs-on: ubuntu-latest
+            
+        steps:
+        -   name: Checkout code
+            uses: actions/checkout@v2
+            
+        -   name: Set up Terraform
+            uses: hashicorp/setup-terraform@v1
+
+        -   name: Install Ansible
+            run: |
+                sudo apt-get update
+                sudo apt-get install -y ansible
+
+        -   name: Configure AWS credentials
+            run: |
+              echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+              echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+
+        -   name: Initialize Terraform
+            run: terraform init ./terraform         
+
+        -   name: Apply Terraform Changes
+            run: terraform apply -auto-approve ./terraform
 
 
