--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,13 +116,15 @@ jobs:
             run: |
                 sudo apt-get update
                 sudo apt-get install -y ansible
-                cd ./terraform
 
         -   name: Configure AWS credentials
             run: |
               echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
               echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
+        -   name: Change to Terraform directory
+            run: cd terraform
+            
         -   name: Initialize Terraform
             run: terraform init        
 
