--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,6 +104,9 @@ jobs:
             run: checkov --directory=./terraform
     build_infrastructure:
         runs-on: ubuntu-latest
+        defaults:
+            run:
+              working-directory: terraform/
             
         steps:
         -   name: Checkout code
@@ -123,9 +126,7 @@ jobs:
               echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
             
         -   name: Initialize Terraform
-            run: |
-                cd terraform/
-                terraform init        
+            run: terraform init        
 
         -   name: Apply Terraform Changes
             run: terraform apply -auto-approve
