--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,24 +111,52 @@ jobs:
         steps:
         -   name: Checkout code
             uses: actions/checkout@v2
+
+        -   name: Terraform Init
+            uses: hashicorp/terraform-github-actions/init@v0.4.0
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              TF_ACTION_WORKING_DIR: 'terraform'
+              AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      
+        -   name: Terraform Validate
+            uses: hashicorp/terraform-github-actions/validate@v0.3.7
+      
+        -   name: Terraform Apply
+            uses: hashicorp/terraform-github-actions/apply@v0.4.0
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              TF_ACTION_WORKING_DIR: 'terraform'
+              AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      
+        -   name: Sync S3
+            uses: jakejarvis/s3-sync-action@master
+            env:
+              SOURCE_DIR: './src'
+              AWS_REGION: 'us-east-1'
+              AWS_S3_BUCKET: 'None'
+              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             
-        -   name: Set up Terraform
-            uses: hashicorp/setup-terraform@v1
+        # -   name: Set up Terraform
+        #     uses: hashicorp/setup-terraform@v1
 
-        -   name: Install Ansible
-            run: |
-                sudo apt-get update
-                sudo apt-get install -y ansible
+        # -   name: Install Ansible
+        #     run: |
+        #         sudo apt-get update
+        #         sudo apt-get install -y ansible
 
-        -   name: Configure AWS credentials
-            run: |
-              echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-              echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+        # -   name: Configure AWS credentials
+        #     run: |
+        #       echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+        #       echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
             
-        -   name: Initialize Terraform
-            run: terraform init        
+        # -   name: Initialize Terraform
+        #     run: terraform init        
 
-        -   name: Apply Terraform Changes
-            run: terraform apply -auto-approve
+        # -   name: Apply Terraform Changes
+        #     run: terraform apply -auto-approve
 
 
