--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,12 @@ on:
             - '.txt'
             - 'LICENSE'
             - 'docs/**'
+env:
+    # verbosity setting for Terraform logs
+    TF_LOG: INFO
+    # Credentials for deployment to AWS
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
     build:
@@ -102,43 +108,72 @@ jobs:
         -   name: Run Checkov
             continue-on-error: true
             run: checkov --directory=./terraform
+
     build_infrastructure:
         runs-on: ubuntu-latest
         defaults:
             run:
-              working-directory: terraform/
+                shell: bash
+                working-directory: terraform/
             
         steps:
         -   name: Checkout code
-            uses: actions/checkout@v2
-
-        -   name: Terraform Init
-            uses: hashicorp/terraform-github-actions/init@v0.4.0
+            uses: actions/checkout@v2       
+    
+        -   name: Setup Terraform with specified version on the runner
+            uses: hashicorp/setup-terraform@v2
+            with:
+                terraform_version: 1.3.0
+        
+        -   name: Terraform init
+            id: init
+            run: terraform init
+    
+        -   name: Terraform format
+            id: fmt
+            run: terraform fmt -check
+        
+        -   name: Terraform validate
+            id: validate
+            run: terraform validate
+    
+        -   name: Terraform plan
+            id: plan
+            run: terraform plan -no-color -input=false
+            continue-on-error: true
+        
+        -   uses: actions/github-script@v6
             env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              TF_ACTION_WORKING_DIR: 'terraform'
-              AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      
-        -   name: Terraform Validate
-            uses: hashicorp/terraform-github-actions/validate@v0.3.7
-      
+                PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+            with:
+                script: |
+                    const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+                    #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+                    #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+                    #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+        
+                    <details><summary>Show Plan</summary>
+        
+                    \`\`\`\n
+                    ${process.env.PLAN}
+                    \`\`\`
+        
+                    </details>
+                    *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+        
+                    github.rest.issues.createComment({
+                    issue_number: context.issue.number,
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    body: output
+                    })
+    
+        -   name: Terraform Plan Status
+            if: steps.plan.outcome == 'failure'
+            run: exit 1
+    
         -   name: Terraform Apply
-            uses: hashicorp/terraform-github-actions/apply@v0.4.0
-            env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              TF_ACTION_WORKING_DIR: 'terraform'
-              AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      
-        -   name: Sync S3
-            uses: jakejarvis/s3-sync-action@master
-            env:
-              SOURCE_DIR: './src'
-              AWS_REGION: 'us-east-1'
-              AWS_S3_BUCKET: 'None'
-              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            run: terraform apply -auto-approve -input=false
             
         # -   name: Set up Terraform
         #     uses: hashicorp/setup-terraform@v1
