--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,6 @@ on:
             - '.txt'
             - 'LICENSE'
             - 'docs/**'
-env:
-    # verbosity setting for Terraform logs
-    TF_LOG: INFO
-    # Credentials for AWS deployment
-    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
     build:
@@ -120,52 +114,25 @@ jobs:
         -   name: Checkout code
             uses: actions/checkout@v2       
     
-        -   name: Setup Terraform with specified version on the runner
-            uses: hashicorp/setup-terraform@v2
-            with:
-                terraform_version: 1.3.0
-        
-        -   name: Terraform init
-            id: init
-            run: terraform init
-    
-        -   name: Terraform format
-            id: fmt
-            run: terraform fmt -check
-        
-        -   name: Terraform validate
-            id: validate
-            run: terraform validate
-    
-        -   name: Terraform plan
-            id: plan
-            run: terraform plan -no-color -input=false
-            continue-on-error: true
-    
-        -   name: Terraform Plan Status
-            if: steps.plan.outcome == 'failure'
-            run: exit 1
-    
-        -   name: Terraform Apply
-            run: terraform apply -auto-approve -input=false
+        -   name: Set up Terraform
+            uses: hashicorp/setup-terraform@v1
+
+        -   name: Install Ansible
+            run: |
+                sudo apt-get update
+                sudo apt-get install -y ansible
+
+        -   name: Set up AWS CLI with credentials
+            run: |
+                aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws configure set aws_session_token ${{ secrets.AWS_SESSION_TOKEN }}
+                aws configure set region us-east-1
             
-        # -   name: Set up Terraform
-        #     uses: hashicorp/setup-terraform@v1
+        -   name: Initialize Terraform
+            run: terraform init        
 
-        # -   name: Install Ansible
-        #     run: |
-        #         sudo apt-get update
-        #         sudo apt-get install -y ansible
-
-        # -   name: Configure AWS credentials
-        #     run: |
-        #       echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-        #       echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-            
-        # -   name: Initialize Terraform
-        #     run: terraform init        
-
-        # -   name: Apply Terraform Changes
-        #     run: terraform apply -auto-approve
+        -   name: Apply Terraform Changes
+            run: terraform apply -auto-approve
 
 
