--- a/terraform/roles/kubernetes-worker/tasks/main.yml
+++ b/terraform/roles/kubernetes-worker/tasks/main.yml
@@ -1,37 +1,48 @@
+- name: Disabling Swap on all nodes
+  become: true
+  shell: swapoff -a
+
+- name: Commenting Swap entries in /etc/fstab
+  become: true
+  replace:
+      path: /etc/fstab
+      regexp: "(^/.*swap*)"
+      replace: '# \1'
+
 - name: Install Docker
   become: true
   apt:
-    name: docker.io
-    state: present
+      name: docker.io
+      state: present
 
 - name: Add Kubernetes APT key
   become: true
   apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-    state: present
+      url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+      state: present
 
 - name: Add Kubernetes APT repo
   become: true
   apt_repository:
-    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
-    state: present
+      repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+      state: present
 
 - name: Install kubeadm, kubelet, and kubectl
   become: true
   apt:
-    name: "{{ item }}"
-    state: present
+      name: "{{ item }}"
+      state: present
   loop:
-    - kubeadm
-    - kubelet
-    - kubectl
+      - kubeadm
+      - kubelet
+      - kubectl
 - name: Generate join token
   shell: kubeadm token create --print-join-command
   register: kubeadm_join_cmd
   delegate_to: "{{ groups['Master_Node'][0] }}"
 
 - set_fact:
-    kubeadm_join: "{{ kubeadm_join_cmd.stdout }}"
+      kubeadm_join: "{{ kubeadm_join_cmd.stdout }}"
 
 - debug: var=kubeadm_join
 
