--- a/terraform/roles/kubernetes-worker/tasks/main.yml
+++ b/terraform/roles/kubernetes-worker/tasks/main.yml
@@ -27,7 +27,7 @@
       repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
       state: present
 
-- name: Install kubeadm, kubelet, and kubectl
+- name: Install kubeadm, kubelet, kubectl and iproute-tc
   become: true
   apt:
       name: "{{ item }}"
@@ -36,6 +36,8 @@
       - kubeadm
       - kubelet
       - kubectl
+      - iproute-tc
+
 - name: Generate join token
   shell: kubeadm token create --print-join-command
   register: kubeadm_join_cmd
