--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,7 +105,7 @@ jobs:
 
     build-infrastructure:
         runs-on: ubuntu-latest
-        # if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request'
         defaults:
             run:
                 shell: bash
