added slack webhook

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -151,5 +151,24 @@ jobs:
 
         -   name: Scan Docker image with Trivy
             continue-on-error: true
-            run: trivy --severity HIGH,CRITICAL --exit-code 1 ${{ secrets.DOCKERHUB_REPOSITORY }}
+            run: |
+                trivy --severity HIGH,CRITICAL --exit-code 1 ${{ secrets.DOCKERHUB_REPOSITORY }}
+                exitcode="$?"
+                echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+                exit "$exitcode"
+
+
+    notify-slack:
+        needs: trivy-scan
+        runs-on: ubuntu-latest
+        if: $GITHUB_OUTPUT != 0 
+    
+        steps:
+            - name: Notify Slack
+            env:
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            run: |
+                curl -X POST -H "Content-type: application/json" --data '{
+                "text": "Vulnerabilities detected in your Docker image! Check Trivy scan results for details."
+                }' $SLACK_WEBHOOK
 
