--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,6 +141,7 @@ jobs:
 
 
     sonarcloud:
+        needs: [build,docker-build-push]
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v3
