--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
     build:
+        if: false
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
@@ -157,7 +158,7 @@ jobs:
                 echo "::set-output name=trivy_exit_code::${?}"
         
         -   name: Notify Slack
-            if: steps.trivy-cmd.exitcode != 0
+            if: steps.trivy-scan.outputs.trivy_exit_code != 0
             env:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
             run: |
