--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -158,7 +158,7 @@ jobs:
                 echo "::set-output name=trivy_exit_code::${?}"
         
         -   name: Notify Slack
-            if: steps.trivy-cmd.outputs.trivy_exit_code != '0'
+            if: steps.trivy-cmd.outcome != 'failure'
             env:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
             run: |
