--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -152,13 +152,12 @@ jobs:
 
         -   name: Scan Docker image with Trivy
             continue-on-error: true
-            id: trivy-cmd
+            id: trivy-scan-cmd
             run: |
                 trivy --severity HIGH,CRITICAL --exit-code 1 ${{ secrets.DOCKERHUB_REPOSITORY }}
-                echo "::set-output name=trivy_exit_code::${?}"
         
         -   name: Notify Slack
-            if: steps.trivy-cmd.outcome == 'failure'
+            if: steps.trivy-scan-cmd.outcome == 'failure'
             env:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
             run: |
