--- a/terraform/roles/kubernetes-master/tasks/main.yml
+++ b/terraform/roles/kubernetes-master/tasks/main.yml
@@ -75,3 +75,22 @@
 - name: Setup flannel network
   become: true
   command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+
+
+# - hosts: k8s_master
+#   become: true
+#   tasks:
+#     - name: Add Kubernetes YUM repository
+#       shell: >
+#         cat <<EOF > /etc/yum.repos.d/kubernetes.repo
+#         [kubernetes]
+#         name=Kubernetes
+#         baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
+#         enabled=1
+#         gpgcheck=1
+#         repo_gpgcheck=1
+#         gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+#         exclude=kubelet kubeadm kubectl
+#         EOF
+#       args:
+#         creates: /etc/yum.repos.d/kubernetes.repo
