--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -168,7 +168,7 @@ jobs:
           uses: zaproxy/action-full-scan@v0.8.0
           with:
             token: ${{ secrets.GITHUB_TOKEN }}
-            target: 'https://juice-shop.herokuapp.com'
+            target: 'https://lf2.net/'
             rules_file_name: '.zap/rules.tsv'
             cmd_options: '-a'
 
