--- a/terraform/roles/kubernetes-master/tasks/main.yml
+++ b/terraform/roles/kubernetes-master/tasks/main.yml
@@ -80,17 +80,24 @@
 # - hosts: k8s_master
 #   become: true
 #   tasks:
-#     - name: Add Kubernetes YUM repository
-#       shell: >
-#         cat <<EOF > /etc/yum.repos.d/kubernetes.repo
-#         [kubernetes]
-#         name=Kubernetes
-#         baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-#         enabled=1
-#         gpgcheck=1
-#         repo_gpgcheck=1
-#         gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-#         exclude=kubelet kubeadm kubectl
-#         EOF
-#       args:
-#         creates: /etc/yum.repos.d/kubernetes.repo
+#     - name: Add Kubernetes DNF repository
+#       dnf_repository:
+#         name: kubernetes
+#         baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el8-\$basearch
+#         enabled: yes
+#         gpgcheck: yes
+#         repo_gpgcheck: yes
+#         gpgkey: 
+#           - https://packages.cloud.google.com/yum/doc/yum-key.gpg
+#           - https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+#         description: "DNF repository for Kubernetes"
+
+#     - name: Install required packages
+#       dnf:
+#         name: "{{ item }}"
+#         state: present
+#       loop:
+#         - docker
+#         - kubelet
+#         - kubeadm
+#         - kubectl
